<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:background="@drawable/background_b"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    tools:context=".Register">

    <TextView
        android:text="@string/register"
        android:textSize="25sp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/email"
        android:fontFamily="sans-serif"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/email"        />

    <EditText
        android:id="@+id/fio"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif"
        android:hint="ФИО"
        />

    <EditText
    android:id="@+id/phone_number"
    android:layout_width="match_parent"
    android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginEnd="40dp"
        android:fontFamily="sans-serif"
        android:hint="@string/phone_number"
    />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/birth"
        android:hint="Дата рождения"
        android:fontFamily="sans-serif"
        android:padding="8dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"

        />

<EditText
    android:id="@+id/password"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_marginBottom="15dp"
    android:fontFamily="sans-serif"
    android:hint="@string/password"

    />
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:paddingHorizontal="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/register"
        android:padding="10dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <TextView
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:fontFamily="sans-serif"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:id="@+id/reg_c"
        android:text="@string/reg_center"
        android:fontFamily="sans-serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />
</LinearLayout>