<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/btn_language_toggle"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/bg_white_card"
        android:gravity="center"
        android:text="@string/lang_ru"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/no_internet_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:background="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_connection"
            android:textSize="18sp"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btn_retry"
            android:text="@string/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:textSize="15sp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:layout_marginBottom="24dp"/>

    </LinearLayout>

</FrameLayout>
