<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:background="@drawable/background_b"
    android:gravity="center"
    tools:context=".Login">

    <TextView
        android:text="@string/login"
        android:fontFamily="serif"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:autofillHints="emailAddress"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="#616161"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
    android:layout_height="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
    android:autofillHints="newPassword"
    android:fontFamily="sans-serif"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:textColor="@android:color/black"
    android:textColorHint="#616161"
         />

    <Space android:layout_height="20dp"
         android:layout_width="match_parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:paddingHorizontal="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/login"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textSize="15sp" />

    <TextView
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:id="@+id/registerNow"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>